--- a/NodaTime/src/NodaTime.Test/NodaTime.Test.csproj
+++ b/NodaTime/src/NodaTime.Test/NodaTime.Test.csproj
@@ -114,6 +114,7 @@
   <ItemGroup>
     <Compile Include="Annotations\MutabilityTest.cs" />
     <Compile Include="Annotations\PurityTest.cs" />
+    <Compile Include="Annotations\SecurityTest.cs" />
     <Compile Include="CalendarSystemTest.cs" />
     <Compile Include="CalendarSystemTest.Era.cs">
       <DependentUpon>CalendarSystemTest.cs</DependentUpon>
